--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -127,12 +127,37 @@
 
   .mobileNavWrap {
     position: absolute;
+    margin-left: -300px;
+    overflow: hidden;
+    background-color: white;
+    transition: 0.2s linear;
+    z-index: 20;
+  }
+
+  .mobileNavWrap.active {
+    display: block;
+    position: absolute;
+    margin: 0;
     z-index: 20;
     background-color: white;
     width: 100%;
+    height: 100%;
+    transition: 0.7s ease-out;
   }
 
   .mobileNavBox {
+  }
+
+  .mobileMenuIcon {
+    display: block;
+  }
+
+  .mobileMenuIcon.burger {
+    display: none;
+  }
+
+  .mobileMenuIcon.cross {
+    display: none;
   }
 
   .mobileNavBox ul {
@@ -140,22 +165,20 @@
     padding: 4px;
   }
 
-  .mobileNavBox li {
-    border-bottom: 1px solid #f0f0f0;
-  }
-
   .categoryEl {
     list-style: none;
     font-size: 1rem;
-    height: 20px;
     padding: 3px;
     margin: 0;
+    margin-top: 20px;
+    border-bottom: 1px solid #f0f0f0;
+    height: 20px;
     display: flex;
     justify-content: space-between;
   }
   .categoryEl > .md-24.md-24.md-dark {
-    margin-top: 0;
-    font-size: 20px;
+    margin-top: -10px;
+    font-size: 35px;
   }
 
   .mobileBoxHead {
