--- a/src/Components/ProductList/ProductList.css
+++ b/src/Components/ProductList/ProductList.css
@@ -7,6 +7,7 @@
   display: flex;
   align-content: center;
   width: 100%;
+  margin-left: 20px;
 }
 
 .productBoxWrapper {
@@ -22,7 +23,7 @@
 .individualProduct {
   position: relative;
   width: 31%;
-  height: 450px;
+  height: 27%;
   padding: 10px;
   font-size: 1.7vw;
   margin-bottom: 10%;
