--- a/src/Components/ProductList/ProductList.css
+++ b/src/Components/ProductList/ProductList.css
@@ -1,6 +1,12 @@
 .productListContain {
   display: flex;
   width: 100%;
+  position: relative;
+}
+
+.Loader {
+  height: 200px;
+  background-color: red;
 }
 
 .productBoxJustifier {
@@ -8,6 +14,7 @@
   align-content: center;
   width: 100%;
   margin-left: 20px;
+  margin-bottom: 80px;
 }
 
 .productBoxWrapper {
