--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -9,6 +9,15 @@
   margin: 0;
 }
 
+.logoNavWrap {
+  display: flex;
+  list-style: none;
+}
+
+.mobileMenuIcon {
+  display: none;
+}
+
 .topNav > ul {
   margin: 0;
   padding: 0;
@@ -109,6 +118,11 @@
     margin: 0;
   }
 
+  .lgScreenAcNav {
+    width: 100px;
+    justify-content: space-evenly;
+  }
+
   .categoryDD {
     display: flex;
     flex-direction: row-reverse;
@@ -125,9 +139,6 @@
     display: none;
   }
 
-  .lgScreenAcNav {
-    display: none;
-  }
   .mobileScreenNavbar {
     display: block;
   }
