--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -80,6 +80,27 @@
   display: none;
 }
 
+.bag {
+  font-size: 1.2vw;
+}
+
+.bagNumber {
+  display: flex;
+  justify-content: center;
+  background-color: white;
+  color: black;
+  border-radius: 100%;
+  height: 20px;
+  width: 20px;
+  position: absolute;
+  margin-left: 30px;
+  margin-top: 35px;
+}
+
+.favouritesFull .md-24.md-24.md-dark {
+  color: #ffa38e;
+}
+
 @media only screen and (min-width: 640px) and (max-width: 1024px) {
   .topNav {
     padding: 5px 15px 5px 15px;
