--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -80,13 +80,10 @@
   display: none;
 }
 
-.bag {
-  font-size: 1.2vw;
-}
-
 .bagNumber {
   display: flex;
   justify-content: center;
+  font-size: 1.2vw;
   background-color: white;
   color: black;
   border-radius: 100%;
@@ -125,6 +122,10 @@
 
   .md-24.md-24.md-dark {
     margin-top: 10px;
+  }
+
+  .bagNumber {
+    font-size: 1.7vw;
   }
 }
 
@@ -236,5 +237,17 @@
     margin-top: 0;
     font-size: 25px;
     color: black;
+  }
+
+  .bagNumber {
+    font-size: 3vw;
+    background-color: white;
+    color: black;
+    border-radius: 100%;
+    height: 12px;
+    width: 12px;
+    position: absolute;
+    margin-left: 20px;
+    margin-top: 22px;
   }
 }
