--- a/src/Components/Favourites/Favourites.css
+++ b/src/Components/Favourites/Favourites.css
@@ -36,3 +36,8 @@
   justify-content: flex-start;
   margin-left: 20px;
 }
+
+.removeBasketDiv:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
