--- a/src/Components/ProductPage/product.css
+++ b/src/Components/ProductPage/product.css
@@ -12,6 +12,7 @@
   cursor: pointer;
   font-size: 60px;
 }
+
 @media only screen and (max-width: 600px) {
   .productPageContainer {
     padding: 20px;
@@ -65,12 +66,6 @@
     padding: 0px;
     height: auto;
     margin-bottom: 20px;
-  }
-
-  .heart > .md-24.md-24.md-dark {
-    font-size: 30px;
-    margin: 10px;
-    cursor: pointer;
   }
 }
 
@@ -192,9 +187,18 @@
   text-decoration: underline;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 639px) {
   .extraDetailTwo {
     width: 60%;
     padding: 0;
+  }
+
+  .heartPink > .md-24.md-24.md-dark {
+    font-size: 30px;
+  }
+
+  .heartNorm > .md-24.md-24.md-dark {
+    cursor: pointer;
+    font-size: 30px;
   }
 }
